contact-us section mobile bug fixes

--- a/assets/contact-form.css
+++ b/assets/contact-form.css
@@ -1,40 +1,41 @@
-.contact_us_aurora{
+.contact_us_page_main{
     padding: 64px 0;
 }
 @media(max-width:768px){
-    .contact_us_aurora{
+    .contact_us_page_main{
         padding: 48px 0;
     }
 }
-.contact__container .contact__form .btn.btn--solid.btn--lg.contact__btn.form--btn{
-    padding: 1rem 9.95rem;
+.contact_pg_form .btn.btn--solid.btn--lg.contact__btn.form--btn{
+    padding: 1.5rem 9.4rem;
     text-transform: uppercase;
     min-height: unset;
     font-weight: 700;
     font-size: 20px;
+    line-height: 1;
 }
 @media(max-width:768px){
-    .contact__container .contact__form .btn.btn--solid.btn--lg.contact__btn.form--btn{
+    .contact_pg_form .btn.btn--solid.btn--lg.contact__btn.form--btn{
         font-size: 18px;
     }
 }
-.contact__container.contact_pg_form .contact__content .contact__title.h5{
+.contact_pg_form .contact__content .contact_pg_form .btn.btn--solid.btn--lg.contact__btn.form--btncontact__title.h5{
     font-weight: 700;
     font-size: 40px
 }
 @media(max-width:768px){
-    .contact__container.contact_pg_form .contact__content .contact__title.h5{
+    .contact_pg_form .contact__content .contact__title.h5{
         font-size: 24px;
     }
 }
-.contact.section .contact__methods__main{
+.contact_us_page .contact__methods__main{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     column-gap: 16px;
     row-gap: 24px;
     margin-top: 48px;
 }
-.contact.section .contact__methods__main a{
+.contact_us_page .contact__methods__main a{
     text-decoration: none;
 }
 @media(min-width:767px){
@@ -43,34 +44,55 @@
         padding-left: unset;
     }
 }
-.contact__methods__main .contact__methods{
+.contact__methods__main .Contact_method_links .contact__methods{
     min-height: 139px;
     background:#fff;
     display: flex;
     justify-content: center;
 }
-.contact__methods__main .contact__methods a{
+@media(max-width:520px){
+    .contact__methods__main .Contact_method_links .contact__methods{
+        min-height: 150px;
+    }
+}
+.Contact_method_links .contact__methods__main .contact__methods a{
     text-decoration: none;
 }
-.contact__methods .contact__methods__heading_main{
+.Contact_method_links .contact__methods .contact__methods__heading_main{
     display: flex;
     align-items: center;
     column-gap: 7px;
     padding-top: 28px;
 }
-.contact__methods .contact__methods__heading_main .contact__methods_icon{
-    height: 18px;
-    
+@media (max-width:520px){
+    .Contact_method_links .contact__methods .contact__methods__heading_main{
+       display: grid;
+    }
 }
-.contact__methods .contact__methods__heading_main .contact__methods__heading,.contact__methods .contact__method p{
+.Contact_method_links .contact__methods .contact__methods__heading_main .contact__methods_icon{
+    height: 18px;
+    text-align: center;
+}
+.Contact_method_links .contact__methods .contact__methods__heading_main .contact__methods__heading,.contact__methods .contact__method p{
    color: #000;
    font-size: 16px;
+   text-align: center;
 }
-.contact__methods .contact__method{
+@media(max-width:520px){
+    .Contact_method_links .contact__methods .contact__methods__heading_main .contact__methods__heading{
+       margin-top: 16px;
+    }
+}
+.Contact_method_links .contact__methods .contact__method{
     padding-top: 20px;
     line-height: 1;
     text-align: center;
 }
-.contact__methods .contact__method.text-decoration {
+@media(max-width:520px){
+    .Contact_method_links .contact__methods .contact__method{
+        padding-top: 14px;
+    }
+}
+.Contact_method_links .contact__methods .contact__method.text-decoration {
     text-decoration: underline;
 }
